# Auto-Notify

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  APIResponseDict.py  Dockerfile  Google.py  README.md  SecretManager.py  Utility.py  config-example.md  config.json  embed_builder.py  main.py  pyproject.toml  requirements.txt
deployment/: cloud_run.ps1  deploy.sh
